[gd_scene load_steps=2 format=2]

[ext_resource path="res://ConnectionScreen.gd" type="Script" id=1]

[node name="ConnectionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.950012
margin_right = -0.950012
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 451.0
margin_top = 232.0
margin_right = 573.0
margin_bottom = 368.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblName" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 122.0
margin_bottom = 14.0
text = "Nom"

[node name="EditName" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 122.0
margin_bottom = 42.0

[node name="LabelIp" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 122.0
margin_bottom = 60.0
text = "Ip"

[node name="EditIp" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 122.0
margin_bottom = 88.0
text = "127.0.0.1"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 122.0
margin_bottom = 112.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 122.0
margin_bottom = 136.0
custom_constants/separation = 20

[node name="BtnCreate" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 46.0
margin_bottom = 20.0
text = "Cr√©er"

[node name="BtnJoin" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 66.0
margin_right = 122.0
margin_bottom = 20.0
text = "Joindre"
[connection signal="text_changed" from="CenterContainer/VBoxContainer/EditName" to="." method="_on_EditName_text_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/BtnCreate" to="." method="_on_BtnCreate_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/BtnJoin" to="." method="_on_BtnJoin_pressed"]
